<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pentecost</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="mm_yy">MM/YY</string>
    <string name="current_bill_amount">Current Bill Amount</string>
    <string name="_400">₦400</string>
    <string name="four_dollar">$400</string>
    <string name="pay">Pay</string>
    <string name="account">Account</string>
    <string name="card">Card</string>
    <string name="account_number">Account Number</string>
    <string name="header_image">Header Image</string>
    <string name="birthday_of_the_account_holder">Birthday of the account holder</string>
</resources>